--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -11,22 +11,74 @@ on:
   pull_request:
     branches: [ $default-branch ]
 
+# Sets the ENV `MIX_ENV` to `test` for running tests
+env:
+    MIX_ENV: test
+  
+permissions:
+    contents: read
+
 jobs:
   test:
     runs-on: ubuntu-latest
-
+    name: Test on OTP ${{matrix.otp}} / Elixir ${{matrix.elixir}}
+    strategy:
+      # Specify the OTP and Elixir versions to use when building
+      # and running the workflow steps.
+      matrix:
+        otp: ['25.0.4']       # Define the OTP version [required]
+        elixir: ['1.14.1']    # Define the elixir version [required]
     steps:
-      - name: Set up Elixir
-        uses: actions/setup-elixir@v1
-        with:
-          otp-version: 24.x
-          elixir-version: 1.14.x
-
-      - name: Checkout code
-        uses: actions/checkout@v2
-
-      - name: Install dependencies
-        run: mix deps.get
-
-      - name: Run tests
-        run: mix test
+    # Step: Setup Elixir + Erlang image as the base.
+    - name: Set up Elixir
+      uses: erlef/setup-beam@v1
+      with:
+        otp-version: ${{matrix.otp}}
+        elixir-version: ${{matrix.elixir}}
+    # Step: Check out the code.  
+    - name: Checkout code
+      uses: actions/checkout@v3
+ # Step: Define how to cache deps. Restores existing cache if present.
+    - name: Cache deps
+      id: cache-deps
+      uses: actions/cache@v3
+      env:
+        cache-name: cache-elixir-deps
+      with:
+        path: deps
+        key: ${{ runner.os }}-mix-${{ env.cache-name }}-${{ hashFiles('**/mix.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-mix-${{ env.cache-name }}-
+# Step: Define how to cache the `_build` directory. After the first run,
+# this speeds up tests runs a lot. This includes not re-compiling our
+# project's downloaded deps every run.
+    - name: Cache compiled build
+      id: cache-build
+      uses: actions/cache@v3
+      env:
+        cache-name: cache-compiled-build
+      with:
+        path: _build
+        key: ${{ runner.os }}-mix-${{ env.cache-name }}-${{ hashFiles('**/mix.lock') }}
+        restore-keys: |
+          ${{ runner.os }}-mix-${{ env.cache-name }}-
+          ${{ runner.os }}-mix-
+# Step: Conditionally bust the cache when job is re-run.
+# Sometimes, we may have issues with incremental builds that are fixed by
+# doing a full recompile. In order to not waste dev time on such trivial
+# issues (while also reaping the time savings of incremental builds for
+# *most* day-to-day development), force a full recompile only on builds
+# that are retried.
+    - name: Clean to rule out incremental build as a source of flakiness
+      if: github.run_attempt != '1'
+      run: |
+        mix deps.clean --all
+        mix clean
+      shell: sh
+    # Step: Download project dependencies. If unchanged, uses
+    # the cached version.
+    - name: Install dependencies
+      run: mix deps.get
+    # Step: Execute the tests.  
+    - name: Run tests
+      run: mix test
