--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "test/http_server_spec"]
 	path = test/http_server_spec
-	url = git@github.com:kelseyroy/http_server_spec.git
+	url = https://github.com/kelseyroy/http_server_spec.git
