--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -35,9 +35,11 @@ jobs:
       with:
         otp-version: ${{matrix.otp}}
         elixir-version: ${{matrix.elixir}}
-    # Step: Check out the code.  
-    - name: Checkout code
+    # Step: Check out the code.   
+    - name: Checkout code and submodules
       uses: actions/checkout@v3
+      with:
+        submodules: recursive
  # Step: Define how to cache deps. Restores existing cache if present.
     - name: Cache deps
       id: cache-deps
@@ -82,3 +84,18 @@ jobs:
     # Step: Execute the tests.  
     - name: Run tests
       run: mix test
+    # Step: Set Up Ruby
+    - name: Set up Ruby
+      uses: ruby/setup-ruby@v1
+      with:
+        ruby-version: '2.7.6'
+        # bundler-cache: true # runs 'bundle install' and caches installed gems automatically
+    - name: Install dependencies
+      working-directory: ./test/http_server_spec
+      run: |
+        gem install bundler
+        bundle install
+    - name: Run Acceptance Tests
+      working-directory: ./test/http_server_spec
+      run: |
+        rake test 
