--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,10 +36,8 @@ jobs:
         otp-version: ${{matrix.otp}}
         elixir-version: ${{matrix.elixir}}
     # Step: Check out the code.   
-    - name: Checkout code and submodules
+    - name: Checkout code
       uses: actions/checkout@v3
-      with:
-        submodules: recursive
  # Step: Define how to cache deps. Restores existing cache if present.
     - name: Cache deps
       id: cache-deps
