--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -89,11 +89,13 @@ jobs:
         ruby-version: '2.7.6'
         # bundler-cache: true # runs 'bundle install' and caches installed gems automatically
     - name: Install dependencies
-      working-directory: ./test/http_server_spec
+      # working-directory: ./test/http_server_spec
       run: |
+        cd test/http_server_spec
         gem install bundler
         bundle install
     - name: Run Acceptance Tests
-      working-directory: ./test/http_server_spec
+      # working-directory: ./test/http_server_spec
       run: |
+        cd test/http_server_spec
         rake test 
