--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -36,10 +36,8 @@ jobs:
         otp-version: ${{matrix.otp}}
         elixir-version: ${{matrix.elixir}}
     # Step: Check out the code.   
-    - name: Checkout repository and submodules
+    - name: Checkout repository
       uses: actions/checkout@v2
-      with:
-        submodules: recursive
  # Step: Define how to cache deps. Restores existing cache if present.
     - name: Cache deps
       id: cache-deps
@@ -89,14 +87,13 @@ jobs:
       uses: ruby/setup-ruby@v1
       with:
         ruby-version: '2.7.6'
-        # bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-    - name: Install dependencies
-      run: |
-        cd test/http_server_spec
-        gem install bundler
-        bundle install
+    # Step: Run Acceptance tests
     - name: Run Acceptance Tests
       run: |
         mix start &
+        echo "Starting server..."
         cd test/http_server_spec
-        rake test 
+        gem install bundler
+        bundle install
+        echo "Running Acceptance Tests..."
+        rake test
