--- a/test/http_server_spec/Rakefile
+++ b/test/http_server_spec/Rakefile
@@ -4,57 +4,58 @@ end
 
 def server_not_running_error(port)
   STDERR.puts '~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~'
-  STDERR.puts "I tried to connect to the server on port #{port}."
+  STDERR.puts "I tried to connect to the server on PORT #{port}."
   STDERR.puts 'However, I was unable to successfully connect.'
   STDERR.puts 'Maybe check if the server is up and running?'
   STDERR.puts '~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~'
   exit 1
 end
 
+PORT = 4000
+
 desc "Run all of the tests in the suite"
 task :test do
-  port=4000
-  if is_server_running?(port)
+  if is_server_running?(PORT)
     puts `bundle exec spinach`
   else
-    server_not_running_error(port)
+    server_not_running_error(PORT)
   end
 end
 
 namespace :test do
   desc "Run all of the tests in 01_getting_started"
   task :f1 do
-    if is_server_running?(port)
+    if is_server_running?(PORT)
       puts `bundle exec spinach --tags 01-getting-started`
     else
-      server_not_running_error(port)
+      server_not_running_error(PORT)
     end
   end
 
   desc "Run all of the tests in 02_structured_data"
   task :f2 do
-    if is_server_running?(port)
+    if is_server_running?(PORT)
       puts `bundle exec spinach --tags 02-structured-data`
     else
-      server_not_running_error(port)
+      server_not_running_error(PORT)
     end
   end
 
   desc "Run all of the tests in 03_file_server"
   task :f3 do
-    if is_server_running?(port)
+    if is_server_running?(PORT)
       puts `bundle exec spinach --tags 03-file-server`
     else
-      server_not_running_error(port)
+      server_not_running_error(PORT)
     end
   end
 
   desc "Run all of the tests in 04_todo_list"
   task :f4 do
-    if is_server_running?(port)
+    if is_server_running?(PORT)
       puts `bundle exec spinach --tags 04-todo-list`
     else
-      server_not_running_error(port)
+      server_not_running_error(PORT)
     end
   end
 end
