--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -90,7 +90,7 @@ jobs:
     # Step: Run Acceptance tests
     - name: Run Acceptance Tests
       run: |
-        MIX_ENV=test mix start &
+        mix start &
         echo "Starting server..."
         cd test/http_server_spec
         gem install bundler
